pyam_0_1/parser.out


Unused terminals:

   IMPLIES
   EQUALS
   VAR
   OR

Grammar

Rule 1     statement -> COMMENT
Rule 2     statement -> PRINT_COMMENT
Rule 3     objectplus -> NAME , objectplus
Rule 4     objectplus -> NAME
Rule 5     objectplus -> OBJNAME , objectplus
Rule 6     objectplus -> OBJNAME
Rule 7     featurepairplus -> featurepair , featurepairplus
Rule 8     featurepairplus -> featurepair
Rule 9     featurepair -> NAME NAME
Rule 10    featurepair -> FVNAME NAME
Rule 11    featurepair -> NAME FDNAME
Rule 12    featurepair -> FVNAME FDNAME
Rule 13    featurepair -> <empty>
Rule 14    statement -> objectplus HAS featurepairplus
Rule 15    statement -> objectplus HAVE featurepairplus
Rule 16    structureplus -> structurebase , structureplus
Rule 17    structureplus -> structurebase
Rule 18    structurebase -> STRUCTURE NAME
Rule 19    structurebase -> STRUCTURE STRNAME
Rule 20    statement -> structureplus HAS roleplus
Rule 21    statement -> structureplus HAVE roleplus
Rule 22    roleplus -> role , roleplus
Rule 23    roleplus -> role
Rule 24    role -> NAME NAME
Rule 25    role -> NAME OBJNAME
Rule 26    statement -> COMPARE ( STRNAME , STRNAME )
Rule 27    statement -> HISTORY
Rule 28    statement -> NODEINFO
Rule 29    statement -> MATCH
Rule 30    statement -> GENERAL
Rule 31    statement -> BRAIN
Rule 32    statement -> CLEAR
Rule 33    statement -> QUIT
Rule 34    statement -> SET PARNAME NUMBER

Terminals, with rules where they appear

(                    : 26
)                    : 26
,                    : 3 5 7 16 22 26
BRAIN                : 31
CLEAR                : 32
COMMENT              : 1
COMPARE              : 26
EQUALS               : 
FDNAME               : 11 12
FVNAME               : 10 12
GENERAL              : 30
HAS                  : 14 20
HAVE                 : 15 21
HISTORY              : 27
IMPLIES              : 
MATCH                : 29
NAME                 : 3 4 9 9 10 11 18 24 24 25
NODEINFO             : 28
NUMBER               : 34
OBJNAME              : 5 6 25
OR                   : 
PARNAME              : 34
PRINT_COMMENT        : 2
QUIT                 : 33
SET                  : 34
STRNAME              : 19 26 26
STRUCTURE            : 18 19
VAR                  : 
error                : 

Nonterminals, with rules where they appear

featurepair          : 7 8
featurepairplus      : 7 14 15
objectplus           : 3 5 14 15
role                 : 22 23
roleplus             : 20 21 22
statement            : 0
structurebase        : 16 17
structureplus        : 16 20 21


Parsing method: LALR


state 0

    (0) S' -> . statement
    (1) statement -> . COMMENT
    (2) statement -> . PRINT_COMMENT
    (14) statement -> . objectplus HAS featurepairplus
    (15) statement -> . objectplus HAVE featurepairplus
    (20) statement -> . structureplus HAS roleplus
    (21) statement -> . structureplus HAVE roleplus
    (26) statement -> . COMPARE ( STRNAME , STRNAME )
    (27) statement -> . HISTORY
    (28) statement -> . NODEINFO
    (29) statement -> . MATCH
    (30) statement -> . GENERAL
    (31) statement -> . BRAIN
    (32) statement -> . CLEAR
    (33) statement -> . QUIT
    (34) statement -> . SET PARNAME NUMBER
    (3) objectplus -> . NAME , objectplus
    (4) objectplus -> . NAME
    (5) objectplus -> . OBJNAME , objectplus
    (6) objectplus -> . OBJNAME
    (16) structureplus -> . structurebase , structureplus
    (17) structureplus -> . structurebase
    (18) structurebase -> . STRUCTURE NAME
    (19) structurebase -> . STRUCTURE STRNAME

    COMMENT         shift and go to state 3
    PRINT_COMMENT   shift and go to state 9
    COMPARE         shift and go to state 13
    HISTORY         shift and go to state 11
    NODEINFO        shift and go to state 16
    MATCH           shift and go to state 10
    GENERAL         shift and go to state 5
    BRAIN           shift and go to state 6
    CLEAR           shift and go to state 8
    QUIT            shift and go to state 12
    SET             shift and go to state 4
    NAME            shift and go to state 14
    OBJNAME         shift and go to state 15
    STRUCTURE       shift and go to state 18


    structurebase                  shift and go to state 1
    objectplus                     shift and go to state 2
    statement                      shift and go to state 7
    structureplus                  shift and go to state 17

state 1

    (16) structureplus -> structurebase . , structureplus
    (17) structureplus -> structurebase .

    ,               shift and go to state 19
    HAS             reduce using rule 17 (structureplus -> structurebase .)
    HAVE            reduce using rule 17 (structureplus -> structurebase .)



state 2

    (14) statement -> objectplus . HAS featurepairplus
    (15) statement -> objectplus . HAVE featurepairplus

    HAS             shift and go to state 20
    HAVE            shift and go to state 21



state 3

    (1) statement -> COMMENT .

    $end            reduce using rule 1 (statement -> COMMENT .)



state 4

    (34) statement -> SET . PARNAME NUMBER

    PARNAME         shift and go to state 22



state 5

    (30) statement -> GENERAL .

    $end            reduce using rule 30 (statement -> GENERAL .)



state 6

    (31) statement -> BRAIN .

    $end            reduce using rule 31 (statement -> BRAIN .)



state 7

    (0) S' -> statement .




state 8

    (32) statement -> CLEAR .

    $end            reduce using rule 32 (statement -> CLEAR .)



state 9

    (2) statement -> PRINT_COMMENT .

    $end            reduce using rule 2 (statement -> PRINT_COMMENT .)



state 10

    (29) statement -> MATCH .

    $end            reduce using rule 29 (statement -> MATCH .)



state 11

    (27) statement -> HISTORY .

    $end            reduce using rule 27 (statement -> HISTORY .)



state 12

    (33) statement -> QUIT .

    $end            reduce using rule 33 (statement -> QUIT .)



state 13

    (26) statement -> COMPARE . ( STRNAME , STRNAME )

    (               shift and go to state 23



state 14

    (3) objectplus -> NAME . , objectplus
    (4) objectplus -> NAME .

    ,               shift and go to state 24
    HAS             reduce using rule 4 (objectplus -> NAME .)
    HAVE            reduce using rule 4 (objectplus -> NAME .)



state 15

    (5) objectplus -> OBJNAME . , objectplus
    (6) objectplus -> OBJNAME .

    ,               shift and go to state 25
    HAS             reduce using rule 6 (objectplus -> OBJNAME .)
    HAVE            reduce using rule 6 (objectplus -> OBJNAME .)



state 16

    (28) statement -> NODEINFO .

    $end            reduce using rule 28 (statement -> NODEINFO .)



state 17

    (20) statement -> structureplus . HAS roleplus
    (21) statement -> structureplus . HAVE roleplus

    HAS             shift and go to state 26
    HAVE            shift and go to state 27



state 18

    (18) structurebase -> STRUCTURE . NAME
    (19) structurebase -> STRUCTURE . STRNAME

    NAME            shift and go to state 29
    STRNAME         shift and go to state 28



state 19

    (16) structureplus -> structurebase , . structureplus
    (16) structureplus -> . structurebase , structureplus
    (17) structureplus -> . structurebase
    (18) structurebase -> . STRUCTURE NAME
    (19) structurebase -> . STRUCTURE STRNAME

    STRUCTURE       shift and go to state 18


    structureplus                  shift and go to state 30
    structurebase                  shift and go to state 1

state 20

    (14) statement -> objectplus HAS . featurepairplus
    (7) featurepairplus -> . featurepair , featurepairplus
    (8) featurepairplus -> . featurepair
    (9) featurepair -> . NAME NAME
    (10) featurepair -> . FVNAME NAME
    (11) featurepair -> . NAME FDNAME
    (12) featurepair -> . FVNAME FDNAME
    (13) featurepair -> .

    NAME            shift and go to state 32
    FVNAME          shift and go to state 34
    ,               reduce using rule 13 (featurepair -> .)
    $end            reduce using rule 13 (featurepair -> .)


    featurepairplus                shift and go to state 33
    featurepair                    shift and go to state 31

state 21

    (15) statement -> objectplus HAVE . featurepairplus
    (7) featurepairplus -> . featurepair , featurepairplus
    (8) featurepairplus -> . featurepair
    (9) featurepair -> . NAME NAME
    (10) featurepair -> . FVNAME NAME
    (11) featurepair -> . NAME FDNAME
    (12) featurepair -> . FVNAME FDNAME
    (13) featurepair -> .

    NAME            shift and go to state 32
    FVNAME          shift and go to state 34
    ,               reduce using rule 13 (featurepair -> .)
    $end            reduce using rule 13 (featurepair -> .)


    featurepairplus                shift and go to state 35
    featurepair                    shift and go to state 31

state 22

    (34) statement -> SET PARNAME . NUMBER

    NUMBER          shift and go to state 36



state 23

    (26) statement -> COMPARE ( . STRNAME , STRNAME )

    STRNAME         shift and go to state 37



state 24

    (3) objectplus -> NAME , . objectplus
    (3) objectplus -> . NAME , objectplus
    (4) objectplus -> . NAME
    (5) objectplus -> . OBJNAME , objectplus
    (6) objectplus -> . OBJNAME

    NAME            shift and go to state 14
    OBJNAME         shift and go to state 15


    objectplus                     shift and go to state 38

state 25

    (5) objectplus -> OBJNAME , . objectplus
    (3) objectplus -> . NAME , objectplus
    (4) objectplus -> . NAME
    (5) objectplus -> . OBJNAME , objectplus
    (6) objectplus -> . OBJNAME

    NAME            shift and go to state 14
    OBJNAME         shift and go to state 15


    objectplus                     shift and go to state 39

state 26

    (20) statement -> structureplus HAS . roleplus
    (22) roleplus -> . role , roleplus
    (23) roleplus -> . role
    (24) role -> . NAME NAME
    (25) role -> . NAME OBJNAME

    NAME            shift and go to state 40


    roleplus                       shift and go to state 41
    role                           shift and go to state 42

state 27

    (21) statement -> structureplus HAVE . roleplus
    (22) roleplus -> . role , roleplus
    (23) roleplus -> . role
    (24) role -> . NAME NAME
    (25) role -> . NAME OBJNAME

    NAME            shift and go to state 40


    roleplus                       shift and go to state 43
    role                           shift and go to state 42

state 28

    (19) structurebase -> STRUCTURE STRNAME .

    ,               reduce using rule 19 (structurebase -> STRUCTURE STRNAME .)
    HAS             reduce using rule 19 (structurebase -> STRUCTURE STRNAME .)
    HAVE            reduce using rule 19 (structurebase -> STRUCTURE STRNAME .)



state 29

    (18) structurebase -> STRUCTURE NAME .

    ,               reduce using rule 18 (structurebase -> STRUCTURE NAME .)
    HAS             reduce using rule 18 (structurebase -> STRUCTURE NAME .)
    HAVE            reduce using rule 18 (structurebase -> STRUCTURE NAME .)



state 30

    (16) structureplus -> structurebase , structureplus .

    HAS             reduce using rule 16 (structureplus -> structurebase , structureplus .)
    HAVE            reduce using rule 16 (structureplus -> structurebase , structureplus .)



state 31

    (7) featurepairplus -> featurepair . , featurepairplus
    (8) featurepairplus -> featurepair .

    ,               shift and go to state 44
    $end            reduce using rule 8 (featurepairplus -> featurepair .)



state 32

    (9) featurepair -> NAME . NAME
    (11) featurepair -> NAME . FDNAME

    NAME            shift and go to state 45
    FDNAME          shift and go to state 46



state 33

    (14) statement -> objectplus HAS featurepairplus .

    $end            reduce using rule 14 (statement -> objectplus HAS featurepairplus .)



state 34

    (10) featurepair -> FVNAME . NAME
    (12) featurepair -> FVNAME . FDNAME

    NAME            shift and go to state 47
    FDNAME          shift and go to state 48



state 35

    (15) statement -> objectplus HAVE featurepairplus .

    $end            reduce using rule 15 (statement -> objectplus HAVE featurepairplus .)



state 36

    (34) statement -> SET PARNAME NUMBER .

    $end            reduce using rule 34 (statement -> SET PARNAME NUMBER .)



state 37

    (26) statement -> COMPARE ( STRNAME . , STRNAME )

    ,               shift and go to state 49



state 38

    (3) objectplus -> NAME , objectplus .

    HAS             reduce using rule 3 (objectplus -> NAME , objectplus .)
    HAVE            reduce using rule 3 (objectplus -> NAME , objectplus .)



state 39

    (5) objectplus -> OBJNAME , objectplus .

    HAS             reduce using rule 5 (objectplus -> OBJNAME , objectplus .)
    HAVE            reduce using rule 5 (objectplus -> OBJNAME , objectplus .)



state 40

    (24) role -> NAME . NAME
    (25) role -> NAME . OBJNAME

    NAME            shift and go to state 50
    OBJNAME         shift and go to state 51



state 41

    (20) statement -> structureplus HAS roleplus .

    $end            reduce using rule 20 (statement -> structureplus HAS roleplus .)



state 42

    (22) roleplus -> role . , roleplus
    (23) roleplus -> role .

    ,               shift and go to state 52
    $end            reduce using rule 23 (roleplus -> role .)



state 43

    (21) statement -> structureplus HAVE roleplus .

    $end            reduce using rule 21 (statement -> structureplus HAVE roleplus .)



state 44

    (7) featurepairplus -> featurepair , . featurepairplus
    (7) featurepairplus -> . featurepair , featurepairplus
    (8) featurepairplus -> . featurepair
    (9) featurepair -> . NAME NAME
    (10) featurepair -> . FVNAME NAME
    (11) featurepair -> . NAME FDNAME
    (12) featurepair -> . FVNAME FDNAME
    (13) featurepair -> .

    NAME            shift and go to state 32
    FVNAME          shift and go to state 34
    ,               reduce using rule 13 (featurepair -> .)
    $end            reduce using rule 13 (featurepair -> .)


    featurepair                    shift and go to state 31
    featurepairplus                shift and go to state 53

state 45

    (9) featurepair -> NAME NAME .

    ,               reduce using rule 9 (featurepair -> NAME NAME .)
    $end            reduce using rule 9 (featurepair -> NAME NAME .)



state 46

    (11) featurepair -> NAME FDNAME .

    ,               reduce using rule 11 (featurepair -> NAME FDNAME .)
    $end            reduce using rule 11 (featurepair -> NAME FDNAME .)



state 47

    (10) featurepair -> FVNAME NAME .

    ,               reduce using rule 10 (featurepair -> FVNAME NAME .)
    $end            reduce using rule 10 (featurepair -> FVNAME NAME .)



state 48

    (12) featurepair -> FVNAME FDNAME .

    ,               reduce using rule 12 (featurepair -> FVNAME FDNAME .)
    $end            reduce using rule 12 (featurepair -> FVNAME FDNAME .)



state 49

    (26) statement -> COMPARE ( STRNAME , . STRNAME )

    STRNAME         shift and go to state 54



state 50

    (24) role -> NAME NAME .

    ,               reduce using rule 24 (role -> NAME NAME .)
    $end            reduce using rule 24 (role -> NAME NAME .)



state 51

    (25) role -> NAME OBJNAME .

    ,               reduce using rule 25 (role -> NAME OBJNAME .)
    $end            reduce using rule 25 (role -> NAME OBJNAME .)



state 52

    (22) roleplus -> role , . roleplus
    (22) roleplus -> . role , roleplus
    (23) roleplus -> . role
    (24) role -> . NAME NAME
    (25) role -> . NAME OBJNAME

    NAME            shift and go to state 40


    roleplus                       shift and go to state 55
    role                           shift and go to state 42

state 53

    (7) featurepairplus -> featurepair , featurepairplus .

    $end            reduce using rule 7 (featurepairplus -> featurepair , featurepairplus .)



state 54

    (26) statement -> COMPARE ( STRNAME , STRNAME . )

    )               shift and go to state 56



state 55

    (22) roleplus -> role , roleplus .

    $end            reduce using rule 22 (roleplus -> role , roleplus .)



state 56

    (26) statement -> COMPARE ( STRNAME , STRNAME ) .

    $end            reduce using rule 26 (statement -> COMPARE ( STRNAME , STRNAME ) .)


